# Sign-Sarthi

./: .dockerignore  README.md  docker-compose.yml
backend/: .dockerignore  .gitattributes  Dockerfile  README.md  pyproject.toml  railway.toml
backend/app/: config.py  main.py
backend/app/api/: __init__.py  dependencies.py
backend/app/api/routes/: health.py  translation.py
backend/app/core/: __init__.py  exceptions.py
backend/app/core/interfaces/: __init__.py  embedding_matcher.py  ner_detector.py  text_processor.py  video_repository.py
backend/app/repositories/: __init__.py  video_repository.py
backend/app/schemas/: __init__.py  translation.py
backend/app/services/: __init__.py  embedding_service.py  ner_service.py  text_processor.py  translation_service.py
frontend/: Caddyfile  Dockerfile  README.md  bun.lockb  index.html  package-lock.json  package.json  railway.toml  tailwind.config.ts
frontend/public/models/: fingerspelling.h5  fingerspelling.tflite  labels.json  weights_info.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AnimationPlayer.tsx  BottomNavigation.tsx  FeatureCard.tsx  FingerspellingCard.tsx  StatsCard.tsx  VideoSequencePlayer.tsx
frontend/src/contexts/: ThemeContext.tsx
frontend/src/hooks/: useFingerspellingDetection.ts
frontend/src/pages/: Index.tsx
frontend/src/screens/: AboutScreen.tsx  AuthScreen.tsx  FingerspellingScreen.tsx  ForgotPasswordScreen.tsx  HelpScreen.tsx  HistoryScreen.tsx  HomeScreen.tsx  InfoModal.tsx  OTPVerificationScreen.tsx  ProfileScreen.tsx  SettingsScreen.tsx  SplashScreen.tsx  (+3 more)
(+11 files in other folders)
