[project]
name = "backend"
version = "0.1.0"
description = "Sign Language Translation API - Text to Animation Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "nltk>=3.9.0",
    "python-multipart>=0.0.12",
    # Semantic matching
    "sentence-transformers>=3.0.0",
    "numpy>=1.26.0",
    # NER
    "spacy>=3.7.0",
    "pip>=25.3",
]

[project.scripts]
start = "uvicorn app.main:app --reload"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
